# qmlagent

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
docs/: architecture.md  protocol.md
fixtures/diagnostics/: README.md
fixtures/diagnostics/binding-bad-arithmetic/: Main.qml  expected.json
fixtures/diagnostics/binding-bad-arithmetic-diagnostic/: Main.qml  expected.json
fixtures/diagnostics/binding-expression-geometry/: Main.qml  expected.json
fixtures/diagnostics/binding-grouped-property/: Main.qml  expected.json
fixtures/diagnostics/binding-identifier-value/: Main.qml  expected.json
fixtures/diagnostics/binding-literal-geometry/: Main.qml  expected.json
fixtures/diagnostics/binding-multiline-expression/: Main.qml  expected.json
fixtures/diagnostics/binding-state-propertychange/: Main.qml  expected.json
fixtures/diagnostics/input-disabled-ancestor/: Main.qml  expected.json
fixtures/diagnostics/input-disabled-target/: Main.qml  expected.json
fixtures/diagnostics/layout-child-exceeds-parent/: Main.qml  expected.json
fixtures/diagnostics/layout-excessive-spacer/: Main.qml  expected.json
fixtures/diagnostics/layout-invisible-ancestor/: Main.qml  expected.json
fixtures/diagnostics/layout-opacity-zero/: Main.qml  expected.json
fixtures/diagnostics/layout-outside-viewport/: Main.qml  expected.json
fixtures/diagnostics/layout-text-elided/: Main.qml  expected.json
fixtures/diagnostics/layout-zero-size/: Main.qml  expected.json
fixtures/diagnostics/textinput-not-editable/: Main.qml  expected.json
fixtures/diagnostics/warning-reference-error/: Main.qml  expected.json
fixtures/diagnostics/warning-type-assignment/: Main.qml  expected.json
fixtures/mcp/: README.md  persistent-workflow.jsonl
fixtures/workflows/: README.md
fixtures/workflows/input-no-effect/: Main.qml
fixtures/workflows/input-refused/: Main.qml
fixtures/workflows/input-state-change/: Main.qml
skills/qmlagent-runtime/: SKILL.md
skills/qmlagent-runtime/agents/: openai.yaml
src/plugins/qmltooling/qmldbg_agent/: CMakeLists.txt  qqmlagentactionability.cpp  qqmlagentactionability_p.h  qqmlagentdiagnostics.cpp  qqmlagentdiagnostics_p.h  qqmlagentinput.cpp  qqmlagentinput_p.h  qqmlagentinputdriver.cpp  qqmlagentinputdriver_p.h  qqmlagentlogbuffer.cpp  qqmlagentlogbuffer_p.h  qqmlagentlogcollector.cpp  qqmlagentlogcollector_p.h  qqmlagentprotocol.cpp  qqmlagentprotocol_p.h  qqmlagentrender.cpp  qqmlagentrender_p.h  qqmlagentruntime.cpp  qqmlagentruntime_p.h  qqmlagentservice.cpp  qqmlagentservice.json  qqmlagentservice_p.h  qqmlagentservicefactory.cpp  qqmlagentservicefactory_p.h  qqmlagentsourceresolver.cpp  qqmlagentsourceresolver_p.h  qqmlagentuitree.cpp  qqmlagentuitree_p.h
tests/auto/qmlagent/: CMakeLists.txt  tst_qmlagentinput.cpp  tst_qmlagentlogbuffer.cpp  tst_qmlagentprotocol.cpp
tests/integration/qmlagent/: CMakeLists.txt  ControlsSmoke.qml  Smoke.qml  controls_main.cpp  main.cpp  tst_qmlagentintegration.cpp
tests/manual/qmlagent/: CMakeLists.txt  Smoke.qml  fixture_main.cpp  tst_qmlagentintegration.cpp
tools/qmlagent/: CMakeLists.txt  launcher_main.cpp  main.cpp  qmlagentclioutput.cpp  qmlagentclioutput.h  qmlagentmcpoutput.cpp  qmlagentmcpoutput.h  qmlagentmcpprotocol.cpp  qmlagentmcpprotocol.h  qmlagentpaths.cpp  qmlagentpaths.h
